--- a/demo3.html
+++ b/demo3.html
@@ -8,10 +8,14 @@
     <link rel="stylesheet" href="style3.css">
 </head>
 <body>
+    
     <div class="chung">
-        <div id="before"> id = id-before</div>
-        <div id="box1"> id = div - 1</div>
-        <div id="box2"> id = id-1-b</div>
+        <div id="box3">id = id -1 -a <br>balbalablbalbalbababalbblalbablablaablablalbalbkabalalbbalbablalbalbablablablblalbabablababalbalblbalbablabllbablabl</br></div>
+        <div id="before">id= id-before</div>
+        <div id="box1">id = div - 1
+            <div id="box2">id = id-1-b<br>blablablablabalbalbalbalblabablabalbabalbalbalbabalblbalb</br>
+            </div>
+        </div>
         <div id="after"> id = id-after</div>
     </div>
 </body>
