--- a/form.html
+++ b/form.html
@@ -1,39 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="form.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <title>Form102</title>
+    <link rel="stylesheet" href="./form.css">
 </head>
 <body>
-    <h1>Personal Information</h1>
-   
-    <b>Your name:</b> <input type="text"><br />
-    <div class="Gender"> <b>Gender: </b>
-        <input type="radio" name="sex" value="male">Male
-        <input type="radio" name="sex" value="Female">Female<br/></div>
+    <div class="container" style="border: 1px solid black;" >
+        <div class="header">
+            <div class=" input-group" style="margin: 0px 0px;">
+                <button type="button" class="btn" style="width: 100%; text-align:left ;"><b>Ingreso de
+                        registro</b></button>
+                <div class="input-group-addon">
+                    <i class="glyphicon glyphicon-remove"></i>
+                </div>
+            </div>
+        </div>
+        <div class="content">
+            <div class="well well-sm" style="margin-top:10px ;">Datos de instructor</div>
+            <div class="well well-sm" style="margin-top:-20px;">
+                <div class="row"></br>
+                    <div class="col-sm-2"></div>
+                    <div class="col-sm-1">
+                        <label for="run" class="modal-label">  <!-- chỉ dung đc với id khi click váo chữ đó thì tự động cho mình điên vào -->
+                          RUN
+                      </label>
+                    </div>
+                    <div class="col-sm-3">
+                        <input id="run" type="text" class="form-control" name="run">
+                    </div>
 
-        <div class="class"><b>Your Favorite:</b><br/></div>
-        <div class="check">
-            <input type="checkbox" name="swim" value="Swim">Cooking <br />
-            <input type="checkbox" name="bike" value="bike">Singing <br />
-            <input type="checkbox" name="clim" value="clim">Dancing <br /></div>
-    <div class="conutry">
-         <select name="country"> Conutry
-                <option value="">ThaiLand</option>
-                <option value="">Laos</option>
-                <option value="">Vietnamese</option>
-                <option value="">Combidia</option>
-              </select></div>
+                    <div class="col-sm-1">
+                        <label for="Nombere Completo" class="modal-label">  <!-- chỉ dung đc với id khi click váo chữ đó thì tự động cho mình điên vào -->
+                          Nombere Completo
+                      </label>
+                    </div>
+                    <div class="col-sm-3">
+                        <input id="Nombere Completo" type="text" class="form-control" name="Nombere Completo">
+                    </div>
 
-<div class="addrees">
-    <p>Address</p>
-    <textarea name="Addrees" id="Addrees" cols="5" rows="10">Enter text here</Address></textarea>
+                    <div class="col-sm-2"></div>
+                </div>
+                <div class="row"></br>
+                    <div class="col-sm-2"></div>
+                    <div class="col-sm-1">
+                        <p><b>Fecha Nacimiento</b></p>
+                    </div>
+                    <div class="col-sm-3">
+                        <div class="input-group">
+                            <div class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></div>
+                            <input id="calendar" type="text" class="form-control" name="calendar"
+                                placeholder="dd-mm-aaaa">
+                        </div>
+                    </div>
+                    <div class="col-sm-1">
+                        <p><b>Email</b></p>
+                    </div>
+                    <div class="col-sm-3">
+                        <div class="input-group">
+                            <div class="input-group-addon">@</div>
+                            <input id="email" type="text" class="form-control" name="email" placeholder="Email">
+                        </div>
 </div>
-
-<input type="submit" value="Send"/>
-    </form>
-</body>
-</html>
+                      <div class="col-sm-1"></div>
+                  </div>
+                  <div class="row"></br>
+                      <div class="col-sm-2"></div>
+                      <div class="col-sm-1">
+                          <p><b>Teléfona</b></p>
+                      </div>
+                      <div class="col-sm-3">
+                        <div class="input-group">
+                          <div class="input-group-addon">12</div>
+                          <input id="run" type="text" class="form-control" name="run">
+                      </div>
+                      </div>
+                      <div class="col-sm-1">
+                          <p><b>Direci
+                                  ón</b></p>
+                      </div>
+                      <div class="col-sm-3">
+                          <input id="Nombere Completo" type="text" class="form-control" name="Nombere Completo">
+                      </div>
+                      <div class="col-sm-2"></div>
+                  </div>
+                  <div class="row"></br>
+                      <div class="col-sm-2"></div>
+                      <div class="col-sm-1">
+                          <p><b>Ciudad</b></p>
+                      </div>
+                      <div class="col-sm-3">
+                        <div class="form-group">
+                          <select class="form-control" id="exampleFormControlSelect1">
+                            <option>Choose...</option>
+                            <option>2</option>
+                            <option>3</option>
+                            <option>4</option>
+                            <option>5</option>
+                          </select>
+                        </div>
+                      </div>
+                      <div class="col-sm-1">
+                          <p><b>Comuna</b></p>
+                      </div>
+                      <div class="col-sm-3">
+                        <div class="form-group">
+                          <select class="form-control" id="exampleFormControlSelect1">
+                            <option>Choose...</option>
+                            <option>2</option>
+                            <option>3</option>
+                            <option>4</option>
+                            <option>5</option>
+                          </select>
+                        </div>
+                      </div>
+                      <div class="col-sm-2"></div>
+                  </div>
+                  <div class="row"></br>
+                      <div class="col-sm-2"></div>
+                      <div class="col-sm-1">
+                          <p><b>Auto</b></p>
+                      </div>
+                      <div class="col-sm-9">
+                          <input id="telefono" type="text" class="form-control" name="Telefono" placeholder="XXXX-15">
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <div class="row">
+<div class="col-sm-9"></div>
+              <div class="col-sm-3">
+                  <div class="col-sm-2">
+                      <div class="container mt-3">
+                          <button type="button" class="btn btn-primary">Submit</button>
+                          <button type="button" class="btn btn-secondary">Cancelar</button>
+                      </div>
+                  </div>
+              </div>
+  </body>
+  </html>
