--- a/form.html
+++ b/form.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <title>Form102</title>
-    <link rel="stylesheet" href="./form.css">
+    <title>Form112</title>
+    
 </head>
 <body>
     <div class="container" style="border: 1px solid black;" >
@@ -28,7 +28,7 @@
                 <div class="row"></br>
                     <div class="col-sm-2"></div>
                     <div class="col-sm-1">
-                        <label for="run" class="modal-label">  <!-- chỉ dung đc với id khi click váo chữ đó thì tự động cho mình điên vào -->
+                        <label for="run" class="modal-label">  
                           RUN
                       </label>
                     </div>
@@ -37,7 +37,7 @@
                     </div>
 
                     <div class="col-sm-1">
-                        <label for="Nombere Completo" class="modal-label">  <!-- chỉ dung đc với id khi click váo chữ đó thì tự động cho mình điên vào -->
+                        <label for="Nombere Completo" class="modal-label"> 
                           Nombere Completo
                       </label>
                     </div>
@@ -82,8 +82,7 @@
                       </div>
                       </div>
                       <div class="col-sm-1">
-                          <p><b>Direci
-                                  ón</b></p>
+                          <p><b>Direción</b></p>
                       </div>
                       <div class="col-sm-3">
                           <input id="Nombere Completo" type="text" class="form-control" name="Nombere Completo">
